TPC-DS datasets on S3, generated on the cluster (#247) (#337)
* cluster: the image built on the cluster, the TPC-DS generator job, the strict configuration (part of #247)

WIP body: benchmarks/k8s/Dockerfile (Spark 4.1.3 on JDK 25; benchmarks.jar built from the repository inside the image; Comet, Iceberg runtime, hadoop-aws + AWS SDK v2 bundle, spark-sql tests jar; tpcds-kit's dsdgen), benchmarks/k8s/kaniko-build.yaml (Kaniko job with a git context, pushes to ECR through IRSA), TpcdsGenRunner (dsdgen on the executors in parallel children, Spark's TPCDSSchema, ZSTD Parquet, fact tables partitioned by their date key), and the vector-shuffle-strict runner configuration (ours + our shuffle with strictFloatingPoint=true) for the maintainer's exact-results comparison.

* kaniko: the private repository's read token from a Secret

* cluster: the generation SparkApplication; the S3A magic committer binding in the image

* kaniko: basic auth for the private clone

* submit-cluster: the shuffle, strict, comet-scan-ourshuffle and hybrid configurations

* image: the C headers for tpcds-kit

* image: tpcds-kit under a modern gcc (gnu89, the implicit-int errors as warnings)

* image: Hadoop client 3.4.3 for JDK 25; generator: char/varchar as string

* image: the Hadoop swap in the extraction layer; plain Kaniko snapshots

* generator: TPCDSSchema quotes its partition columns

* generator manifest: executors sized for the shared bench nodes

* k8s: render-run.sh -- a SparkApplication per configuration from the submit script's settings

* k8s: the SF1000 generation manifest for the bench-xl group

* k8s README: the cluster pipeline as it runs

* k8s: S3A through the SDK's default credential chain (IRSA)

* k8s: the executors run as the IRSA service account too

* k8s: the xl generation's executors as the IRSA account

* k8s: executor service account via sparkConf as well

* k8s: the web-identity provider directly (the SDK default chain is a shared singleton S3A closes)

* tpcds-gen: